force-app/main/default/objects/Hold_Off_Tracking__c/Hold_Off_Tracking__c.object-meta.xml
<CustomObject>
    <label>Hold Code Tracking</label>
    <nameField>
        <displayFormat>HT-{0000000}</displayFormat>
        <label>Hold Code Tracking #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hold Code Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>