force-app/main/default/objects/Hold_Off_Tracking__c/fields/Hold_Code__c.field-meta.xml
<CustomField>
    <fullName>Hold_Code__c</fullName>
    <label>Hold Code</label>
    <type>TextArea</type>
</CustomField>