force-app/main/default/objects/Hold_Off_Tracking__c/fields/Hold_Off_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Hold_Off_Time_Stamp__c</fullName>
    <label>Hold Off Time Stamp</label>
    <type>DateTime</type>
</CustomField>