force-app/main/default/objects/Hold_Off_Tracking__c/fields/Is_Released__c.field-meta.xml
<CustomField>
    <fullName>Is_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Released?</label>
    <type>Checkbox</type>
</CustomField>