force-app/main/default/objects/Hold_Off_Tracking__c/fields/Last_Hold_Off_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Last_Hold_Off_Reasons__c</fullName>
    <label>Last Hold Off Reason(s)</label>
    <type>TextArea</type>
</CustomField>