force-app/main/default/objects/Hold_Off_Tracking__c/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Hold_Off_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>