force-app/main/default/objects/Hold_Off_Tracking__c/fields/Release_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Release_Date_Time__c</fullName>
    <label>Release Date Time</label>
    <type>DateTime</type>
</CustomField>